--- a/web-fundamental/css-mod2/universal_grouping_css.html
+++ b/web-fundamental/css-mod2/universal_grouping_css.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Internal CSS Example</title>
+    <title>Universal slector and Grouping</title>
 
     <style>
         /* Universal selector
