--- a/web-fundamental/css-mod2/css.html
+++ b/web-fundamental/css-mod2/css.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>CSS Example</title>
+    <title>ID & Class Selectors</title>
     <style>
         /* ID selector */
         #best {
